--- a/register.html
+++ b/register.html
@@ -1,42 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <title>Document</title>
-</head>
-<body>
+    <title>Registration Form</title>
     <style>
-        body{
-         background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsBFNzvUGOK_vyt_nk_CUSJShGJGO6Ipu6CA&s);
-         background-repeat:no-repeat;
-         background-size:cover;
+        body {
+            background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsBFNzvUGOK_vyt_nk_CUSJShGJGO6Ipu6CA&s);
+            background-repeat: no-repeat;
+            background-size: cover;
         }
-        .form{
-            background-color:black;
-            opacity:79%;
-            color:white;
-            margin-top:140px;
-            margin-left:540px;
-            text-align:center;
-            border-radius:5%;
-            width:400px;
-            height:430px;
+        .form {
+            background-color: black;
+            opacity: 79%;
+            color: white;
+            margin-top: 140px;
+            margin-left: 540px;
+            text-align: center;
+            border-radius: 5%;
+            width: 400px;
+            height: 420px;
+            padding: 20px;
         }
-        input{
-            width:250px;
-            height:30px;
+        input {
+            width: 250px;
+            height: 30px;
         }
-        input:hover{
-            transform:scale(1.2);
-            background:lightgray;
+        input:hover {
+            transform: scale(1.05);
+            background: lightgray;
+        }
+        .error {
+            color: red;
+            font-size: 12px;
         }
     </style>
- <div class="form">
-    <br><h1 style=align:"center">Registeration Form</h1>
-    <input type="text" placeholder="enter name"><br><br>
-    <input type="email" placeholder="enter email"><br><br>
-    <input type="password" placeholder="password"><br><br>
-    <input type="password" placeholder="conform password"><br><br>
-    <button style="background-color:red; height:40px; width:200px;" >Register</button><br><br>
- </div>
+</head>
+
+<body>
+    <div class="form">
+        <h1>Registration Form</h1>
+        <form onsubmit="return validateForm()">
+            <input type="text" id="name" placeholder="Name"><br>
+            <span class="error" id="nameError"></span><br>
+            <input type="email" id="email" placeholder="Email"><br>
+            <span class="error" id="emailError"></span><br>
+            <input type="password" id="password" placeholder="Password"><br>
+            <span class="error" id="passwordError"></span><br>
+            <input type="password" id="confirmPassword" placeholder="Confirm Password"><br>
+            <span class="error" id="confirmPasswordError"></span><br>
+            <input type="text" id="phone" placeholder="Phone Number"><br>
+            <span class="error" id="phoneError"></span><br>
+            <button type="submit" style="background-color:red; height:40px; width:200px;">Register</button>
+        </form>
+    </div>
+
+    <script>
+        function validateForm() {
+            let isValid = true;
+            document.querySelectorAll(".error").forEach(e => e.innerText = "");
+            let name = document.getElementById("name").value.trim();
+            if (name === "") {
+                document.getElementById("nameError").innerText = "Name is required";
+                isValid = false;
+            }
+            let email = document.getElementById("email").value.trim();
+            let emailPattern = /^[^ ]+@[^ ]+\.[a-z]{2,3}$/;
+            if (!email.match(emailPattern)) {
+                document.getElementById("emailError").innerText = "Enter a valid email";
+                isValid = false;
+            }
+            let password = document.getElementById("password").value;
+            if (password.length < 6) {
+                document.getElementById("passwordError").innerText = "Password must be at least 6 characters";
+                isValid = false;
+            }
+            let confirmPassword = document.getElementById("confirmPassword").value;
+            if (confirmPassword !== password || confirmPassword === "") {
+                document.getElementById("confirmPasswordError").innerText = "Passwords do not match";
+                isValid = false;
+            }
+            let phone = document.getElementById("phone").value.trim();
+            let phonePattern = /^[0-9]{10}$/;
+            if (!phone.match(phonePattern)) {
+                document.getElementById("phoneError").innerText = "Enter 10 digit phone number";
+                isValid = false;
+            }
+            if (isValid) {
+                alert("Registration Successful!");
+            }
+            return isValid;
+        }
+    </script>
 </body>
 </html>
