--- a/netflix.html
+++ b/netflix.html
@@ -10,8 +10,8 @@
     <div class="sign">
         <br>
         <h1>Sign In</h1>
-        <input style=" height:30px; width:300px;  border-radius:5%; color:white;" type="text" placeholder="email or mobile number "><br><br>
-        <input style= "height:30px; width:300px;  border-radius:5%; color:white;" type="password" placeholder="Password"><br><br>
+        <input style=" height:30px; width:300px;  border-radius:5%;" type="text" placeholder="email or mobile number "><br><br>
+        <input style= "height:30px; width:300px;  border-radius:5%;" type="password" placeholder="Password"><br><br>
         <button c style="background-color:red; height:30px; width:300px;">Sign In</button><br><br>
         <div class="me">
           <input type="checkbox">Remember Me
@@ -60,5 +60,6 @@
         }
     </style>
 </body>
+
 
 </html>
